force-app/main/default/objects/Recruitment_Assessment_Note__c/Recruitment_Assessment_Note__c.object-meta.xml
<CustomObject>
    <label>Recruitment Assessment Note</label>
    <nameField>
        <displayFormat>RAF-{0000}</displayFormat>
        <label>Recruitment Assessment Form #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitment Assessment Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>