force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/Apt_Suite_Unit__c.field-meta.xml
<CustomField>
    <fullName>Apt_Suite_Unit__c</fullName>
    <label>Apt/Suite/Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>