force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/Assessment_Note__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Note__c</fullName>
    <label>Assessment Note</label>
    <type>TextArea</type>
</CustomField>