force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer</label>
    <referenceTo>Home_Care_Seeker_Consumer__c</referenceTo>
    <relationshipName>Recruitment_Assessment_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>