force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/EdFund_Facility__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select an Education Fund Facility</inlineHelpText>
    <label>EdFund Facility</label>
    <referenceTo>EdFund_Facilites__c</referenceTo>
    <relationshipName>Recruitment_Assessment_Form</relationshipName>
    <type>Lookup</type>
</CustomField>