force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/EdFund_Vendor__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select an Education Fund Education Provider/Vendor (will override any selected Facility)</inlineHelpText>
    <label>EdFund Vendor</label>
    <referenceTo>EdFund_Vendor__c</referenceTo>
    <relationshipName>Recruitment_Assessment_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>