force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Address__c.field-meta.xml
<CustomField>
    <fullName>PAF_Address__c</fullName>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>