force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PAF_Appointment_Date_Time__c</fullName>
    <label>Appointment Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>