force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Appointment_Duration_Estimated__c.field-meta.xml
<CustomField>
    <fullName>PAF_Appointment_Duration_Estimated__c</fullName>
    <label>Appointment Duration (Estimated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
            </value>
            <value>
                <fullName>45 Minutes</fullName>
            </value>
            <value>
                <fullName>60 Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>