force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Appointment_Language__c.field-meta.xml
<CustomField>
    <fullName>PAF_Appointment_Language__c</fullName>
    <label>Appointment Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>