force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Assessment_Health_Plan__c.field-meta.xml
<CustomField>
    <fullName>PAF_Assessment_Health_Plan__c</fullName>
    <label>Assessment Health Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alameda Alliance</fullName>
            </value>
            <value>
                <fullName>Care 1st</fullName>
            </value>
            <value>
                <fullName>Care More</fullName>
            </value>
            <value>
                <fullName>Health Net</fullName>
            </value>
            <value>
                <fullName>Kaiser</fullName>
            </value>
            <value>
                <fullName>Molina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>