force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_City__c.field-meta.xml
<CustomField>
    <fullName>PAF_City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>