force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>PAF_Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>