force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Follow_Up_When_Where_How__c.field-meta.xml
<CustomField>
    <fullName>PAF_Follow_Up_When_Where_How__c</fullName>
    <label>Follow Up (When? Where? How?)</label>
    <type>TextArea</type>
</CustomField>