force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_How_did_you_find_this_provider__c.field-meta.xml
<CustomField>
    <fullName>PAF_How_did_you_find_this_provider__c</fullName>
    <description>(Assessment List)</description>
    <inlineHelpText>(Assessment List)</inlineHelpText>
    <label>How did you find this provider?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Union list</fullName>
            </value>
            <value>
                <fullName>Union Meeting</fullName>
            </value>
            <value>
                <fullName>Referral from Union</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>Senior Activity Centers</fullName>
            </value>
            <value>
                <fullName>Referral from former student</fullName>
            </value>
            <value>
                <fullName>Other (Use notes area below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>