force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_IHSS_Pay_Stub_ID__c.field-meta.xml
<CustomField>
    <fullName>PAF_IHSS_Pay_Stub_ID__c</fullName>
    <inlineHelpText>(Will be located on the Provider&apos;s IHSS Pay Stub)</inlineHelpText>
    <label>IHSS Pay Stub ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>