force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Notes__c.field-meta.xml
<CustomField>
    <fullName>PAF_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>