force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Quotes__c.field-meta.xml
<CustomField>
    <fullName>PAF_Quotes__c</fullName>
    <label>Quotes</label>
    <type>TextArea</type>
</CustomField>