force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Recruitment_Assessment__c.field-meta.xml
<CustomField>
    <fullName>PAF_Recruitment_Assessment__c</fullName>
    <label>Recruitment Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already took CMMI Class</fullName>
            </value>
            <value>
                <fullName>Bad / Disconnected Number</fullName>
            </value>
            <value>
                <fullName>Bad Address</fullName>
            </value>
            <value>
                <fullName>Caring for family member cannot attend training</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>IC Signed / Enrolled</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Left a Message</fullName>
            </value>
            <value>
                <fullName>No Consumer Care</fullName>
            </value>
            <value>
                <fullName>No Longer Provider / Consumer</fullName>
            </value>
            <value>
                <fullName>No Time (but would not specify)</fullName>
            </value>
            <value>
                <fullName>Not Available (at the moment, but for the future)</fullName>
            </value>
            <value>
                <fullName>Not Home</fullName>
            </value>
            <value>
                <fullName>Not Interested / Declined</fullName>
            </value>
            <value>
                <fullName>Not Member of health plan</fullName>
            </value>
            <value>
                <fullName>On Other Plan / Wants to Switch</fullName>
            </value>
            <value>
                <fullName>Scheduled Appointment</fullName>
            </value>
            <value>
                <fullName>Special Project</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Under 18</fullName>
            </value>
            <value>
                <fullName>Verified health plan member</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>