force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/PAF_Zip__c.field-meta.xml
<CustomField>
    <fullName>PAF_Zip__c</fullName>
    <label>Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>