force-app/main/default/objects/Recruitment_Assessment_Note__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Recruitment_Assessment_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>